# tauri

./: .gitignore  LICENSE  README.md
.github/workflows/: android.yml  cpp-core.yml  ios.yml
cpp-core/: CMakeLists.txt  README.md
cpp-core/include/: inspector.h
cpp-core/src/: http_client.cpp  http_client.h  inspector.cpp  tls_client.cpp  tls_client.h  x509_parser.cpp  x509_parser.h
cpp-core/tests/: CMakeLists.txt  test_inspector_error_paths.cpp  test_url_parse.cpp
docs/: api.md  architecture.md  build.md  demo.md  ios-signing.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: styles.css
frontend/src/components/: CertificateCard.vue  ChainTree.vue  HtmlViewer.vue  JsonExporter.vue  SiteSelector.vue
frontend/src/composables/: useCheckSite.ts
frontend/src/lib/: invokeBackend.ts
frontend/src/mocks/: mockBackend.ts
frontend/src/router/: index.ts
frontend/src/tests/: CertificateCard.spec.ts  ChainTree.spec.ts  HomeView.spec.ts  SettingsView.spec.ts  SiteSelector.spec.ts  dto.spec.ts  fixtures.ts  mockBackend.spec.ts  setup.ts
frontend/src/types/: site.ts
frontend/src/views/: HomeView.vue  ResultView.vue  SettingsView.vue
frontend/tests/: CertificateCard.spec.ts  HomeView.spec.ts  JsonExporter.spec.ts  SettingsView.spec.ts  SiteSelector.spec.ts  dto.spec.ts  fixtures.ts  mockBackend.spec.ts  setup.ts  useCheckSite.spec.ts
scripts/: build-gost-engine-android.sh  build-openssl-android.sh  check-sites.mjs  fetch-trust-store.sh  gen-icons.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  dto.rs  ffi.rs  lib.rs  main.rs  rust_core.rs
trust-store/: README.md  manifest.json
trust-store/intermediates/: .gitkeep
trust-store/roots/: .gitkeep
