[package]
name = "gci-app"
version = "1.0.0"
description = "GosCertInspector — Tauri mobile host"
edition = "2021"
rust-version = "1.77"

[lib]
name = "gci_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gci-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
cmake = "0.1"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"

# OTA-проверка trust-store (ТЗ §9): скачиваем официальные PEM с УЦ Минцифры
# и сравниваем SHA-256 с встроенным манифестом. Используем rustls без
# OpenSSL, чтобы не тянуть лишний нативный код на iOS/Android.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "http2",
] }
sha2 = "0.10"
base64 = "0.22"

# rust-core dependencies (real TLS without C++/OpenSSL)
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "0.26", optional = true }
x509-parser = { version = "0.16", optional = true }
tokio = { version = "1", features = ["net", "io-util", "time"], optional = true }
chrono = { version = "0.4", optional = true }
hex = { version = "0.4", optional = true }

# File system utilities
dirs = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"

[features]
default = []
mock-core = []
rust-core = ["rustls", "rustls-pemfile", "webpki-roots", "x509-parser", "tokio", "chrono", "hex"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
